# comms_ariel

./: CMakeLists.txt  README.md  main.cpp  package.xml
comms_ariel_client/: CMakeLists.txt  main.cpp  package.xml  receiver.py
comms_ariel_client/include/: connect.hpp  converter.hpp  messages.hpp
comms_ariel_client/proto/: comms_ariel.proto
comms_ariel_client/src/: connect.cpp  converter.cpp  main.cpp  messages.cpp
comms_ariel_server/: CMakeLists.txt  main.cpp  package.xml
comms_ariel_server/include/: connect.hpp  converter.hpp
comms_ariel_server/proto/: comms_ariel.pb.cc  comms_ariel.pb.h  comms_ariel_pb2.py
comms_ariel_server/src/: connect.cpp  converter.cpp  main.cpp
proto/: CMakeLists.txt  comms_ariel.pb.cc  comms_ariel.pb.h
